fix resume picture line break on mobile

--- a/_sass/hydejack/__inline/_avatar.scss
+++ b/_sass/hydejack/__inline/_avatar.scss
@@ -29,7 +29,6 @@
   float: right;
   width: 6.5rem;
   height: 6.5rem;
-  margin: 0 0 .5rem 1rem;
   border-radius: 100%;
   
 //   position: relative; 
