--- a/_sass/hydejack/_avatar.pre.scss
+++ b/_sass/hydejack/_avatar.pre.scss
@@ -18,7 +18,6 @@
   float: right;
   width: 6.5rem;
   height: 6.5rem;
-  margin: 0 0 .5rem 1rem;
   border-radius: 100%;
   // >>>
   position: relative; // link
