--- a/_sass/pooleparty/_type.pre.scss
+++ b/_sass/pooleparty/_type.pre.scss
@@ -70,13 +70,8 @@ strong {
 
 .hr {
   border-bottom: 1px solid $border-color;
-  padding-bottom: .5rem;
-  margin-bottom: 1.5rem;
-
-  &.page-title {
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 h4, h5, h6, .h4, .h5, .h6 {
